--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import "/css/lightmode.cssS";
 * {
   margin: 0;
   padding: 0;
@@ -121,7 +122,7 @@ body {
   content: "";
   width: calc(100% - 60px);
   height: 8px;
-  background-color: #00283a55;
+  background-color: #00283a63;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
@@ -191,7 +192,12 @@ body {
   gap: 20px;
 }
 .sub-title-btn {
-  padding: 8px 24px;
+  height: 28px;
+  width: 118px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
   background-color: transparent;
   border-radius: 100px;
@@ -222,4 +228,54 @@ body {
     transform: translateX(8px);
     opacity: 0.5;
   }
+}
+.main-first-div {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: white;
+  margin-bottom: 95px;
+}
+.main-second-div {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+}
+.number-icon {
+  margin-top: 35px;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.number-create-wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+.number-create-div {
+  background-color: var(--bg-color-blue);
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  border-radius: 20px;
+}
+.number-create-div p {
+  color: var(--bg-color-white);
+}
+.number-icon p {
+  display: inline-block;
+  color: var(--bg-color-white);
+  font-size: 26px;
+}
+.created-project-text {
+  font-weight: 600;
 }
