--- a/css/lightmode.css
+++ b/css/lightmode.css
@@ -1,13 +1,15 @@
 * {
-  --bg-color-black-34: rgba(0, 0, 0, 0.342);
-  --bg-color-black-11: rgba(0, 0, 0, 0.11);
+  --bg-color-black: #000;
+  --bg-color-white: #fff;
   --bg-color-blue: #00283a;
+  --bg-color: #02162b;
 }
 .light * {
   /* OVERWRITING EXISTING VARS WITH NEW VALUES */
   --bg-color-black-34: rgba(255, 255, 255, 0.342);
-  --bg-color-black-11: rgba(255, 255, 255, 0.11);
-  --bg-color-blue: #0075ac;
+  --bg-color-white: #fff;
+  --bg-color-blue: #fff;
+  --bg-color: #f4f5f7;
 }
 
 .shimmer {
