--- a/css/lightmode.css
+++ b/css/lightmode.css
@@ -8,7 +8,7 @@
   /* OVERWRITING EXISTING VARS WITH NEW VALUES */
   --bg-color-black-34: rgba(255, 255, 255, 0.342);
   --bg-color-white: #fff;
-  --bg-color-blue: #fff;
+  --bg-color-blue: #ff8181;
   --bg-color: #f4f5f7;
 }
 
