--- a/css/index.css
+++ b/css/index.css
@@ -59,6 +59,7 @@ body {
 .wrapper {
   display: flex;
   justify-content: center;
+  z-index: 100;
 }
 .main-offset {
   width: 100%;
@@ -337,4 +338,15 @@ body {
   font-size: 16px;
   border: none;
   color: #ff8181;
+}
+
+.front {
+  position: relative;
+}
+canvas {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
