--- a/css/life.css
+++ b/css/life.css
@@ -3,13 +3,11 @@
   margin: 0;
   padding: 0;
 }
-
 body {
   background-color: var(--bgg-color) !important;
   font-family: Arial, sans-serif;
   margin-bottom: 3000px;
 }
-
 .navbar-wrapper {
   width: 100%;
   height: 78px;
@@ -54,17 +52,10 @@ body {
 .nav-bar-left div {
   height: 100%;
   flex: 1;
-  color: var(--bgg-color-font);
+  color: white;
   display: flex;
   align-items: center;
-  cursor: pointer;
 }
-.nav-bar-right div:hover,
-.nav-bar-left div :hover {
-  opacity: 0.5;
-  transition: 0.8s;
-}
-
 .wrapper {
   display: flex;
   justify-content: center;
@@ -122,7 +113,7 @@ body {
   border-radius: 20px;
   padding: 20px;
   box-sizing: border-box;
-  color: var(--bgg-color-font) !important;
+  color: #fff !important;
 }
 .card::-webkit-scrollbar {
   display: none;
@@ -212,7 +203,7 @@ body {
   background-color: transparent;
   border-radius: 100px;
   border: 1px solid #fff;
-  color: var(--bgg-color-font);
+  color: #fff;
   font-family: Arial, sans-serif;
   font-size: 13px;
   font-weight: 600;
@@ -243,7 +234,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  color: var(--bgg-color-font);
+  color: white;
   margin-bottom: 95px;
 }
 .main-second-div {
@@ -279,75 +270,15 @@ body {
   border-radius: 20px;
 }
 .number-create-div p {
-  color: var(--bgg-color-font);
+  color: var(--bgg-color-white);
 }
 .number-icon p {
   display: inline-block;
-  color: var(--bgg-color-font);
+  color: var(--bgg-color-white);
   font-size: 26px;
 }
 .created-project-text {
   font-weight: 600;
-}
-.border-div {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 30px;
-  color: var(--bgg-color-font) !important;
-  font-size: 16px;
-  font-weight: bold;
-}
-.main-third-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  font-style: italic;
-  font-size: 16px;
-  font-weight: bold;
-  background-color: var(--bgg-color-blue) !important;
-  color: var(--bgg-color-font) !important;
-  width: 100%;
-  height: 130px;
-  border-radius: 30px;
-}
-.main-fourth-div {
-  width: 100%;
-  height: 380px;
-  /* background-image: url(/logo-img/wallhaven-rrezx7_1920x1080.png); */
-  overflow: hidden;
-  object-fit: cover;
-}
-.main-fifth-div {
-  width: 100%;
-  height: 540px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  row-gap: 20px;
-  column-gap: 40px;
-  margin-bottom: 80px;
-}
-.main-fifth-div div {
-  background-color: var(--bgg-color-blue) !important;
-  border-radius: 10px;
-}
-.fifth-content {
-  height: 80%;
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-left: 20px;
-  margin-top: 20px;
-}
-.order-button {
-  background-color: transparent;
-  font-size: 16px;
-  border: none;
-  color: #ff8181;
 }
 
 .front {
@@ -359,18 +290,4 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
-}
-#videoPlayer {
-  width: 400px;
-  margin: auto;
-  text-align: center;
-}
-.main-sixth-div {
-  display: flex;
-  flex-direction: row;
-
-  width: 100%;
-  height: 431px;
-
-  gap: 20px;
 }
