--- a/css/index.css
+++ b/css/index.css
@@ -411,3 +411,12 @@ canvas {
 #mode-switch.active svg path {
   stroke: var(--bgg-color-font);
 }
+
+@media screen and (max-width: 900px) {
+  .layout-default {
+    flex-direction: column;
+    place-items: center;
+  }
+  .layout-default-bar {
+  }
+}
